# game-solver

./: .gitignore  Cargo.toml  README.md  _typos.toml  rust-toolchain
.github/workflows/: deploy.yml  rust.yml  typos.yml
book/: book.toml  landing.html
book/src/: SUMMARY.md  credits.md  introduction.md  links.md  performance.md  reinforcement_learning.md  scoring.md
book/src/combinatorial-games/: introduction.md  optimization.md  optimization_tips.md  scoring.md
book/src/combinatorial-games/nim/: introduction.md  solving.md  structure.md
book/src/examples/: introduction.md
book/src/examples/nim/: introduction.md  solving.md  structure.md
book/src/features/: list.md  reinforcement_learning.md
crates/game-solver/: Cargo.toml
crates/game-solver/src/: disjoint_game.rs  game.rs  lib.rs  loopy.rs  player.rs  stats.rs  transposition.rs
crates/game-solver/src/reinforcement/: agent.rs  mod.rs  state.rs
crates/game-solver/src/reinforcement/strategy/: explore.rs  mod.rs
crates/games/: Cargo.toml  README.md
crates/games-cli/: Cargo.toml
crates/games-cli/src/: human.rs  interactive.rs  lib.rs  main.rs  robot.rs
crates/games-cli/src/report/: mod.rs  scores.rs  stats.rs
crates/games-ui/: Cargo.toml  index.html
crates/games-ui/src/: app.rs  main.rs
crates/games/src/: app.rs  lib.rs  main.rs
crates/games/src/chomp/: README.md  cli.rs  mod.rs
crates/games/src/domineering/: README.md  cli.rs  mod.rs
crates/games/src/games/: chomp.rs  domineering.rs  order_and_chaos.rs  reversi.rs  tic_tac_toe.rs
crates/games/src/games/chomp/: cli.rs  mod.rs
crates/games/src/games/domineering/: cli.rs  mod.rs
crates/games/src/games/nim/: cli.rs
crates/games/src/games/order_and_chaos/: cli.rs
crates/games/src/games/reversi/: cli.rs  mod.rs
crates/games/src/games/tic_tac_toe/: cli.rs  mod.rs
crates/games/src/naive_nim/: README.md  gui.rs  mod.rs
crates/games/src/nim/: README.md  cli.rs  gui.rs  mod.rs
crates/games/src/order_and_chaos/: README.md  cli.rs  mod.rs
crates/games/src/reversi/: README.md  cli.rs  mod.rs  mv.rs
crates/games/src/sprouts/: README.md  mod.rs
crates/games/src/tic_tac_toe/: README.md  cli.rs  mod.rs
crates/games/src/util/: mod.rs  move_natural.rs  move_score.rs  state.rs
crates/games/src/util/cli/: human.rs  mod.rs  play.rs  robot.rs
crates/games/src/util/cli/report/: mod.rs  scores.rs  stats.rs
crates/games/src/util/gui/: egui_display.rs  mod.rs
crates/games/src/zener/: README.md  mod.rs
crates/grid-stack/: Cargo.toml  README.md
crates/grid-stack/src/: lib.rs
crates/nimnim/: Cargo.toml  README.md
crates/nimnim/src/: lib.rs
crates/normal-game/: Cargo.toml  README.md
crates/normal-game/src/: lib.rs
examples/: README.md  chomp.rs  domineering.rs  nim.rs  order_and_chaos.rs  reversi.rs  tic_tac_toe.rs
src/: game.rs  lib.rs  main.rs  reinforcement.rs  solve.rs  transposition.rs
src/reinforcement/: agent.rs  collate.rs  mod.rs
src/reinforcement/strategy/: mod.rs  terminate.rs
