[package]
name = "game-solver"
description = "Solve any combinatorial game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeoDog896/game-solver"
keywords = ["combinatorial-game", "negamax", "minimax", "game-theory"]
categories = ["game", "algorithm"]
version = "0.1.0"
edition = "2021"

[features]
"xxhash" = ["dep:twox-hash"]
"rayon" = ["dep:rayon", "xxhash", "dep:sysinfo", "dep:moka"]
"reinforcement" = ["dep:rand", "dep:dfdx"]

[profile.release]
lto = true
panic = "abort"

[dev-dependencies]
anyhow = "1.0.72"
array2d = "0.3.0"
itertools = "0.11.0"
ndarray = "0.15.6"

[dependencies]
dfdx = { version = "0.13.0", optional = true }
moka = { version = "0.11", optional = true }
rand = { version = "0.8", optional = true }
rayon = { version = "1.7", optional = true }
sysinfo = { version = "0.29", optional = true }
twox-hash = { version = "1.6", optional = true }

[package.metadata.docs.rs]
all-features = true
