[package]
name = "game-solver"
description = "Solve any combinatorial game"
license = "MPL"
repository = "https://github.com/LeoDog896/game-solver"
keywords = ["combinatorial-game", "negamax", "minimax", "game-theory"]
categories = ["game", "algorithm"]
version = "0.1.0"
edition = "2021"

[features]
"xxhash" = ["dep:twox-hash"]
"rayon" = ["xxhash", "dep:sysinfo", "dep:moka", "dep:tokio", "dep:tokio-util"]
"js" = ["moka/js"]

[dependencies]
# dfdx = { git = "https://github.com/coreylowman/dfdx.git", rev = "4722a99", optional = true }
moka = { version = "0.12", optional = true, features = ["future"] }
rand = { version = "0.8", optional = true }
sysinfo = { version = "0.30", optional = true }
twox-hash = { version = "1.6", optional = true }
itertools = { version = "0.13" }
futures = "0.3.30"
thiserror = "1.0"
castaway = "0.2.3"
fxhash = "0.2.1"
smallvec = "1.13.2"
tokio-util = { version = "0.7.13", optional = true }
tokio = { version = "1.43.0", optional = true }

[package.metadata.docs.rs]
all-features = true
