[package]
name = "games-cli"
license = "MPL"
edition = "2021"
version = "0.1.0"

[dependencies]
game-solver = { path = "../game-solver", features = ["rayon"] }
games = { path = "../games" }
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
dialoguer = "0.11.0"
clearscreen = "4.0.1"
owo-colors = "4.1.0"
tokio-util = "0.7.13"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread", "signal"] }
ratatui = "0.29.0"
