[package]
name = "games-ui"
description = "UI counterparts for the games crate"
license = "MPL"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence"
]}
egui = "0.27"
serde = { version = "1", features = ["derive"] }
log = "0.4"
games = { path = "../games"}
game-solver = { path = "../game-solver" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.game-solver]
path = "../game-solver"
features = ["rayon", "reinforcement"]

[target.'cfg(target_arch = "wasm32")'.dependencies.game-solver]
path = "../game-solver"
features = ["rayon", "reinforcement", "js"]
