[package]
name = "games"
license = "MPL"
edition = "2021"
version = "0.1.0"

[dependencies]
game-solver = { path = "../game-solver", features = ["rayon", "reinforcement"] }
anyhow = "1"
array2d = "0.3"
ndarray = "0.15"
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }
ordinal = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
once_cell = "1.19.0"
egui = { version = "0.27", optional = true }

[features]
"egui" = ["dep:egui"]
