[package]
name = "games"
license = "MPL"
edition = "2021"
version = "0.1.0"

[dependencies]
game-solver = { path = "../game-solver", features = ["rayon"] }
anyhow = "1.0.86"
array2d = "0.3.2"
ndarray = "0.16.1"
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }
ordinal = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
once_cell = "1.19.0"
egui = { version = "0.28", optional = true }
egui_commonmark = { version = "0.17.0", optional = true, features = ["macros"] }
thiserror = "1.0.63"
petgraph = { version = "0.6.5", features = ["serde-1"] }
castaway = "0.2.3"
ratatui = "0.28.1"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
tokio-util = "0.7.13"

[features]
"egui" = ["dep:egui", "dep:egui_commonmark"]
